# desloppify

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  integration.yml  release.yml
archive/forked-desloppify-python/: README.md  pyproject.toml
archive/forked-desloppify-python/desloppify/app/cli_support/: parser_groups_admin.py
archive/forked-desloppify-python/desloppify/app/commands/: review_backends.py
archive/forked-desloppify-python/desloppify/app/commands/review/: batch.py  batches.py  exceptions.py  external.py  import_helpers.py
archive/forked-desloppify-python/desloppify/app/commands/scan/: scan_reporting_presentation.py
archive/forked-desloppify-python/desloppify/core/: registry.py
archive/forked-desloppify-python/desloppify/tests/commands/: test_review_process_guards_direct.py
archive/forked-desloppify-python/desloppify/tests/core/: test_registry_invariants.py
archive/forked-desloppify-python/desloppify/tests/review/: test_review_backends.py
archive/forked-desloppify-python/docs/: CANONICAL_LEVERAGE_MAP.md
crates/deslop-cli/: Cargo.toml
crates/deslop-cli/src/: main.rs
crates/deslop-cli/tests/: integration_commands.rs  integration_scan.rs
crates/deslop-cli/tests/fixtures/sample_python/src/: helpers.py  main.py  utils.py
crates/deslop-cli/tests/fixtures/sample_python/tests/: test_main.py
crates/deslop-config/: Cargo.toml
crates/deslop-config/src/: lib.rs
crates/deslop-detectors/: Cargo.toml
crates/deslop-detectors/src/: concerns.rs  context.rs  lib.rs  phase.rs  shared.rs  tool_runner.rs
crates/deslop-detectors/src/shared/: complexity.rs  coupling.rs  cycles.rs  dupes.rs  flat_dirs.rs  gods.rs  large_files.rs  naming.rs  orphaned.rs  review_coverage.rs  security.rs  signature.rs  single_use.rs  test_coverage.rs
crates/deslop-discovery/: Cargo.toml
crates/deslop-discovery/src/: lib.rs  walk.rs  zones.rs
crates/deslop-fixer/: Cargo.toml
crates/deslop-fixer/src/: lib.rs  python.rs  registry.rs  runner.rs  typescript.rs
crates/deslop-graph/: Cargo.toml
crates/deslop-graph/src/: coupling.rs  graph.rs  lib.rs  tarjan.rs
crates/deslop-lang-generic/: Cargo.toml
crates/deslop-lang-generic/src/: builtin.rs  csharp.rs  dart.rs  gdscript.rs  go.rs  lib.rs  plugin.rs  tools.rs
crates/deslop-lang-python/: Cargo.toml
crates/deslop-lang-python/src/: dict_keys.rs  extractors.rs  facade.rs  imports.rs  lib.rs  phases.rs  plugin.rs  private_imports.rs  responsibility.rs  smells.rs  tools.rs  uncalled.rs  unused.rs
crates/deslop-lang-typescript/: Cargo.toml
crates/deslop-lang-typescript/src/: imports.rs  lib.rs  logs.rs  plugin.rs  react.rs  security.rs  smells.rs  unused.rs
crates/deslop-lang-typescript/tests/: detector_integration.rs
crates/deslop-narrative/: Cargo.toml
crates/deslop-narrative/src/: actions.rs  dimensions.rs  headline.rs  lib.rs  phase.rs  reminders.rs  strategy.rs  types.rs
crates/deslop-output/: Cargo.toml
crates/deslop-output/src/: lib.rs  llm_summary.rs  reporting_subjective.rs  scan_analysis.rs  scan_report.rs  score_integrity.rs  scorecard.rs  tree.rs  visualize.rs  workflow_guide.rs
crates/deslop-plan/: Cargo.toml
crates/deslop-plan/src/: auto_cluster.rs  lib.rs  operations.rs  plan_model.rs  ranking.rs  reconcile.rs
crates/deslop-review/: Cargo.toml
crates/deslop-review/src/: batch.rs  external.rs  external_session.rs  feedback_contract.rs  import.rs  import_pipeline.rs  lib.rs  merge.rs  preflight.rs  prepare.rs  prompt_template.rs  result_merger.rs  result_parser.rs  runner.rs  runner_codex.rs  scoring.rs  trust.rs  types.rs
crates/deslop-review/src/context/: budget.rs  mechanical.rs  mod.rs  selection.rs
crates/deslop-review/src/context_signals/: ai_debt.rs  auth.rs  migration.rs  mod.rs
crates/deslop-review/src/dimensions/: data.rs  mod.rs  selection.rs
crates/deslop-review/tests/: review_pipeline.rs
crates/deslop-scoring/: Cargo.toml
crates/deslop-scoring/src/: detection.rs  lib.rs  policy.rs  results.rs
crates/deslop-scoring/tests/: score_parity.rs
crates/deslop-state/: Cargo.toml
crates/deslop-state/src/: filtering.rs  lib.rs  merge.rs  persist.rs  subjective.rs
crates/deslop-treesitter/: Cargo.toml
crates/deslop-treesitter/src/: extract.rs  grammars.rs  lib.rs  spec.rs
crates/deslop-types/: Cargo.toml
crates/deslop-types/src/: analysis.rs  enums.rs  finding.rs  lib.rs  newtypes.rs  registry.rs  review_types.rs  scoring.rs  state.rs
docs/: LLM_RUNBOOK.md  USAGE.md
scripts/: desloppify-local
