[package]
name = "deslop-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "desloppify"
path = "src/main.rs"

[dependencies]
deslop-types.workspace = true
deslop-discovery.workspace = true
deslop-graph.workspace = true
deslop-scoring.workspace = true
deslop-state.workspace = true
deslop-detectors.workspace = true
deslop-lang-python.workspace = true
deslop-config.workspace = true
deslop-output.workspace = true
deslop-lang-generic.workspace = true
deslop-review.workspace = true
deslop-narrative.workspace = true
deslop-plan.workspace = true
tokio.workspace = true
clap.workspace = true
crossterm.workspace = true
serde_json.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile = "3.26.0"
