[package]
name = "deslop-detectors"
version.workspace = true
edition.workspace = true

[dependencies]
deslop-types.workspace = true
deslop-graph.workspace = true
deslop-discovery.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
regex.workspace = true
similar.workspace = true

[dev-dependencies]
deslop-state.workspace = true
tempfile.workspace = true
