[package]
name = "deslop-lang-generic"
version.workspace = true
edition.workspace = true

[dependencies]
deslop-types.workspace = true
deslop-detectors.workspace = true
deslop-discovery.workspace = true
deslop-graph.workspace = true
deslop-treesitter.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile.workspace = true
