[package]
name = "deslop-lang-python"
version.workspace = true
edition.workspace = true

[dependencies]
deslop-types.workspace = true
deslop-detectors.workspace = true
deslop-graph.workspace = true
deslop-discovery.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3.26.0"
