[package]
name = "deslop-review"
version.workspace = true
edition.workspace = true

[dependencies]
deslop-types.workspace = true
deslop-scoring.workspace = true
deslop-state.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
rand.workspace = true
