[package]
name = "deslop-state"
version.workspace = true
edition.workspace = true

[dependencies]
deslop-types.workspace = true
deslop-scoring.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
globset.workspace = true
fs2.workspace = true

[dev-dependencies]
tempfile = "3.26.0"
