[package]
name = "deslop-treesitter"
version.workspace = true
edition.workspace = true

[dependencies]
deslop-types.workspace = true
tree-sitter.workspace = true
tree-sitter-language.workspace = true
streaming-iterator.workspace = true
tree-sitter-python.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-go.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-java.workspace = true
tree-sitter-c-sharp.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-bash.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-c.workspace = true
tree-sitter-php.workspace = true
tree-sitter-scala.workspace = true

[dev-dependencies]
tempfile.workspace = true
